# procedural-generation-2

./: .gitignore  Cargo.toml  README.md  flake.nix
.run/: Run all tests.run.xml  Run debug & backtrace.run.xml  Run debug.run.xml  Run normal.run.xml
assets/ignore/: buildings.aseprite  default.aseprite  duel_modified_palette.hex  forest.aseprite  forest_objects.aseprite  forest_path.aseprite  grass.aseprite  grass_objects.aseprite  ground_tile_tester.aseprite  land-dry-l1.aseprite  land-dry-l2.aseprite  land-dry-l3.aseprite  land-humid-l1.aseprite  land-humid-l2.aseprite  land-humid-l3.aseprite  land-l1-dry.aseprite  land-l1-humid.aseprite  land-l1-moderate.aseprite  land-l2-dry.aseprite  land-l2-humid.aseprite  land-l2-moderate.aseprite  land-l3-dry.aseprite  land-l3-humid.aseprite  land-l3-moderate.aseprite  land-moderate-l1.aseprite  land-moderate-l2.aseprite  land-moderate-l3.aseprite  objects-animated.aseprite  objects-l1-dry.aseprite  objects-l1-humid.aseprite  objects-l1-moderate.aseprite  objects-l2-dry.aseprite  objects-l2-humid.aseprite  objects-l2-moderate.aseprite  objects-l3-dry.aseprite  objects-l3-humid.aseprite  objects-l3-moderate.aseprite  objects-water-deep.aseprite  objects-water-shallow.aseprite  path.aseprite  (+15 more)
assets/objects/: all.exclusions.ruleset.toml  all.tile-type.ruleset.ron  all.tile-type.ruleset.toml  any.terrain.ruleset.ron  any.terrain.ruleset.toml  deepwater.terrain.ruleset.ron  exclusions.ruleset.ron  forest.ruleset.ron  forest.terrain.ruleset.ron  grass.ruleset.ron  grass.terrain.ruleset.ron  land1.terrain.ruleset.ron  land1.terrain.ruleset.toml  land2.terrain.ruleset.ron  land2.terrain.ruleset.toml  land3.terrain.ruleset.ron  land3.terrain.ruleset.toml  sand-path.ruleset.ron  sand.ruleset.ron  sand.terrain.ruleset.ron  shallowwater.terrain.ruleset.ron  shore.terrain-ruleset.ron  shore.terrain.ruleset.ron  shore.terrain.ruleset.toml  tile.type-ruleset.ron  water.ruleset.ron  water.terrain.ruleset.ron  water.terrain.ruleset.toml
src/: animations.rs  app_state.rs  camera.rs  components.rs  constants.rs  controls.rs  coords.rs  events.rs  main.rs  messages.rs  resources.rs  settings.rs  shared.rs  shared_events.rs  states.rs  world.rs
src/coords/: coords.rs  mod.rs  point.rs
src/generation/: async_utils.rs  chunk.rs  components.rs  direction.rs  draft_chunk.rs  draft_tile.rs  layered_plane.rs  mod.rs  neighbours.rs  plane.rs  resources.rs  tile.rs  tile_data.rs  tile_type.rs
src/ui/: diagnostics.rs  mod.rs  (+1 more)
(+82 files in other folders)
