[package]
name = "procedural-generation-2"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.15.2", features = ["wayland"] }
bevy-inspector-egui = { version = "0.29.1" }
bevy_pancam = { version = "0.17.0", features = ["bevy_egui"] }
noise = { version = "0.9.0" }
rand = { version = "0.9.0" }
serde = { version = "1.0.217", features = ["derive"] }
bevy_common_assets = { version = "0.12.0", features = ["ron"] }
iyes_perf_ui = "0.4.0"

#[profile.dev]
#opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
codegen-units = 1

[profile.wasm-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"
